[package]
name = "bcrypt-fast"
version = "0.1.0"
edition = "2018"
authors = ["Kenan Sulayman <kenan@styla.com>"]
repository = "https://github.com/styladev/bcrypt-fast-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.45"
bcrypt = "0.4.0"
wee_alloc = "0.4.4"

[dependencies.rand]
version = "0.6"
features = ["wasm-bindgen"]
